--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "runserver": "json-server --watch db.json --port 8000 "
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
+    "@types/react-redux": "^7.1.24",
     "fork-ts-checker-webpack-plugin": "^7.2.6",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "ts-loader": "^9.2.8"
   },
   "devDependencies": {
